--- a/package.json
+++ b/package.json
@@ -22,5 +22,18 @@
     "email": "info@onemediamoz.com",
     "name": "OneMedia SA",
     "url": "https://onemediamoz.com"
+  },
+  "scripts": {
+    "dev": "nodemon ./src/index.js",
+    "start": "node ./src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1"
   }
 }
