--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "url": "https://github.com/ONE-MEDIA-SA/api-mongo-fikani/issues"
   },
   "engines": {
-    "node": "17.1.0",
-    "yarn": "1.22.18",
-    "npm": "8.1.4"
+    "node": ">=17.1.0",
+    "yarn": ">=1.22.18",
+    "npm": ">=8.1.4"
   },
   "repository": {
     "directory": "https://github.com/ONE-MEDIA-SA/api-mongo-fikani",
