--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase-admin": "^11.0.1",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
   }
 }
