--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
     "mongoose": "^6.6.1",
