--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "start": "node ./src/index.js"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "autoprefixer": "^10.4.12",
+    "nodemon": "^2.0.19",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   },
   "dependencies": {
     "cors": "^2.8.5",
