--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
