--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-device": "^0.4.2",
     "firebase-admin": "^11.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
+    "node-device-detector": "^2.0.8",
     "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
   }
